--- a/app/src/main/res/layout/item_recycler_add_joke.xml
+++ b/app/src/main/res/layout/item_recycler_add_joke.xml
@@ -50,18 +50,28 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:orientation="horizontal"
                     android:paddingBottom="2dp">
 
                     <TextView
+                        android:layout_weight="1"
                         android:id="@+id/tv_asign"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="4dp"
                         android:text="不听我吹牛是你的损失"
+                        android:textColor="#9b9b9b"
+                        android:textSize="@dimen/text_size_10"/>
+
+                    <TextView
+                        android:paddingRight="16dp"
+                        android:id="@+id/tv_type"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="图片路径错误"
                         android:textColor="#9b9b9b"
                         android:textSize="@dimen/text_size_10"/>
                 </LinearLayout>
